# project_architect

./: .gitignore  LICENSE  README.md  docker-compose.yml
config/: logging_config.json
docs/: API.md  ARCHITECTURE.md
project_architect/: .env.example  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
project_architect/config/: default_config.json
project_architect/docs/: README.md
project_architect/examples/: example_config.json  example_usage.py
project_architect/src/: __init__.py  main.py
project_architect/src/core/: __init__.py  architecture_generator.py
project_architect/src/interfaces/: __init__.py  cli.py
project_architect/src/templates/: __init__.py  node_templates.py
project_architect/src/utils/: __init__.py  helpers.py  logger.py
project_architect/tests/: __init__.py
project_architect/tests/integration/: __init__.py  test_api.py  test_project_generation.py
project_architect/tests/unit/: __init__.py  test_anthropic_client.py  test_project_analyzer.py
src/: config.py  main.py  project_generator.py  project_generator.pyBAK
src/clients/: __init__.py  anthropic_client.py  base_client.py  github_client.py
src/config/: __init__.py  config.py
src/core/: architecture_generator.py  code_generator.py  dependency_manager.py  project_analyzer.py  project_structure_generator.py
src/interfaces/: api.py  cli.py
src/models/: __init__.py  architecture_plan.py  code_file.py  dependency_spec.py  project_structure.py  project_type.py
src/templates/: python_templates.py  react_templates.py
src/utils/: helpers.py  validators.py
tests/: conftest.py
tests/unit/: test_architecture_generator.py  test_code_generator.py  test_dependency_manager.py  test_github_client.py  test_project_structure_generator.py
